--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,74 +1,4 @@
 <div th:fragment="navbar">
-<<<<<<< HEAD
-  <header>
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="navbar-menu">
-        <div class="navbar-start">
-          <div class="tabs is-large is-toggle is-toggle-rounded">
-            <ul class="is-size-6">
-              <li th:classappend="${currentPath == '/'} ? 'is-active' : ''">
-                <a href="/">
-                  <span class="icon is-small"
-                    ><i class="fas fa-users"></i
-                  ></span>
-                  <span>Team</span>
-                </a>
-              </li>
-              <li
-                th:classappend="${currentPath.startsWith('/box')} ? 'is-active' : ''"
-              >
-                <a href="/box">
-                  <span class="icon is-small"><i class="fas fa-box"></i></span>
-                  <span>Box</span>
-                </a>
-              </li>
-              <li
-                th:classappend="${currentPath.startsWith('/inventory')} ? 'is-active' : ''"
-              >
-                <a href="/inventory">
-                  <span class="icon is-small"><i class="fas fa-box"></i></span>
-                  <span>Inventory</span>
-                </a>
-              </li>
-              <li
-                th:classappend="${currentPath.startsWith('/catch')} ? 'is-active' : ''"
-              >
-                <a href="/catch">
-                  <span class="icon is-small"
-                    ><i class="fas fa-bullseye"></i
-                  ></span>
-                  <span>Catch</span>
-                </a>
-              </li>
-              <li
-                th:classappend="${currentPath.startsWith('/shop')} ? 'is-active' : ''"
-              >
-                <a href="/shop">
-                  <span class="icon is-small"><i class="fas fa-shop"></i></span>
-                  <span>Shop</span>
-                </a>
-              </li>
-              <li
-                th:classappend="${currentPath.startsWith('/encounterPath')} ? 'is-active' : ''"
-              >
-                <a href="/encounterPath">
-                  <span class="icon is-small"
-                    ><i class="fas fa-crosshairs"></i
-                  ></span>
-                  <span>Encounter</span>
-                </a>
-              </li>
-              <li
-                th:classappend="${currentPath.startsWith('/gyms')} ? ' is-active' : ''"
-              >
-                <a href="/gyms">
-                  <span class="icon is-small"
-                    ><i class="fas fa-chess-rook"></i
-                  ></span>
-                  <span>Gyms</span>
-                </a>
-              </li>
-=======
     <header>
       <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-menu">
@@ -137,13 +67,12 @@
                         <span>Gyms</span>
                     </a>
                 </li>
-                <li th:classappend="${currentPath.startsWith('/gyms')} ? ' is-active' : ''">
+                <li th:classappend="${currentPath.startsWith('/player/gym')} ? ' is-active' : ''">
                     <a href="/player/gym">
                         <span class="icon is-small"><i class="fas fa-chess-rook"></i></span>
                         <span>Player Gym</span>
                     </a>
                 </li>
->>>>>>> c1acee2fda785a8e54d67025ca13ff9a745cf43e
 
               <li
                 th:classappend="${currentPath.startsWith('/pokedex')} ? 'is-active' : ''"
