--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -4,7 +4,7 @@
         <div class="navbar-menu">
           <div class="navbar-start">
             <div class="tabs is-large is-toggle is-toggle-rounded">
-              <ul>
+              <ul class="is-size-6">
                 <li th:classappend="${currentPath == '/'} ? 'is-active' : ''">
                   <a href="/">
                     <span class="icon is-small"
